Created first Interaction with toolbar and grid view Added more responsive design for grid, now image scales itself in whatever height is available.
Toolbar can now send messages when directory items are removed or added. It can receive messages when current viewed directory us changed

--- a/FileExplorer/Views/DirectoryPage.xaml
+++ b/FileExplorer/Views/DirectoryPage.xaml
@@ -20,9 +20,15 @@
 
     <Page.Resources>
         <DataTemplate x:Key="GridItemTemplate" x:DataType="storageWrappers:DirectoryItemWrapper">
-            <StackPanel  Padding="10  20 10 10">
-                <Image Source="{x:Bind Thumbnail, Mode=OneWay}" Height="95"  />
-                <Grid>
+            <Grid  Padding="10  20 10 10">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Image Source="{x:Bind Thumbnail, Mode=OneWay}" />
+                <Grid Row="1">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="30" />
                     </Grid.RowDefinitions>
@@ -64,193 +70,88 @@
                     <behaviors:DoubleClickBehavior Command="{StaticResource OpenCommand}" CommandParameter="{x:Bind}"  />
                 </interactivity:Interaction.Behaviors>
 
-            </StackPanel>
+            </Grid>
         </DataTemplate>
-        <Style x:Key="MenuButton" TargetType="Button">
-            <Setter Property="Padding" Value="10 8"  />
-            <Setter Property="Margin" Value="0 0 10 0" />
-        </Style>
     </Page.Resources>
 
-    <Grid Padding="20 20 5 5" KeyboardAcceleratorPlacementMode="Hidden">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="55" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid Margin="0 0 0 10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="300" />
-            </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Horizontal">
-                <DropDownButton
-                    Style="{StaticResource MenuButton}" 
-                    ToolTipService.ToolTip="New File"
-                    ToolTipService.Placement="Bottom">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">New</TextBlock>
-                        <FontIcon FontSize="12" Glyph="&#xE710;" />
-                    </StackPanel>
-                    <DropDownButton.Flyout>
-                        <MenuFlyout Placement="Bottom">
-                            <MenuFlyoutItem 
-                                Command="{x:Bind ViewModel.CreateFileCommand}"
-                                Text="File" />
-                            <MenuFlyoutItem 
-                                Command="{x:Bind ViewModel.CreateDirectoryCommand}"
-                                Text="Folder"/>
-                        </MenuFlyout>
-                    </DropDownButton.Flyout>
-                </DropDownButton>
-                <Button 
-                    Style="{StaticResource MenuButton}"
-                    ToolTipService.ToolTip="Copy"
-                    Command="{x:Bind ViewModel.CopySelectedItemsCommand}"
-                    ToolTipService.Placement="Bottom">
-                    <FontIcon FontSize="17" Glyph="&#xE8C8;" />
-                </Button>
-                <Button 
-                    Style="{StaticResource MenuButton}"
-                    ToolTipService.ToolTip="Cut"
-                    Command="{x:Bind ViewModel.CutSelectedItemsCommand}"
-                    ToolTipService.Placement="Bottom">
-                    <FontIcon FontSize="17" Glyph="&#xE8C6;" />
-                </Button>
-                <Button 
-                    Style="{StaticResource MenuButton}"
-                    ToolTipService.ToolTip="Paste"
-                    Command="{x:Bind ViewModel.PasteItemsCommand}"
-                    IsEnabled="{x:Bind ViewModel.HasCopiedFiles, Mode=OneWay}"
-                    ToolTipService.Placement="Bottom">
-                    <FontIcon FontSize="17" Glyph="&#xE77F;" />
-                </Button>
-                <Button 
-                    Command="{x:Bind ViewModel.BeginRenamingItemCommand}"
-                    Style="{StaticResource MenuButton}"
-                    ToolTipService.ToolTip="Rename"
-                    ToolTipService.Placement="Bottom">
-                    <FontIcon FontSize="17" Glyph="&#xE8AC;" />
-                </Button>
-                <Button 
-                    Style="{StaticResource MenuButton}"
-                    Command="{x:Bind ViewModel.RecycleSelectedItemsCommand}"
-                    ToolTipService.ToolTip="DeleteAsync"
-                    ToolTipService.Placement="Bottom">
-                    <FontIcon FontSize="17" Glyph="&#xE74D;" />
-                </Button>
-            </StackPanel>
-            <StackPanel Grid.Column="1" Orientation="Horizontal">
-                <DropDownButton 
-                    Style="{StaticResource MenuButton}"
-                    ToolTipService.ToolTip="Change View Of Items"
-                    ToolTipService.Placement="Bottom">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">View</TextBlock>
-                        <FontIcon FontSize="12" Glyph="&#xF246;"  />
-                    </StackPanel>
-                </DropDownButton>
-                <DropDownButton 
-                    Style="{StaticResource MenuButton}"
-                    ToolTipService.ToolTip="Apply Filter"
-                    ToolTipService.Placement="Bottom">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">Filter</TextBlock>
-                        <FontIcon FontSize="12" Glyph="&#xE71C;"  />
-                    </StackPanel>
-                </DropDownButton>
-                <Button 
-                    Style="{StaticResource MenuButton}" 
-                    Command="{x:Bind ViewModel.ShowDetailsOfSelectedItemCommand}"
-                    ToolTipService.ToolTip="File Details"
-                    ToolTipService.Placement="Bottom">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">Details</TextBlock>
-                        <FontIcon FontSize="14" Glyph="&#xE946;" />
-                    </StackPanel>
-                </Button>
-            </StackPanel>
-        </Grid>
-        <Grid Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <controls:AdaptiveGridView x:Name="DirectoryItemsGrid"
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <controls:AdaptiveGridView x:Name="DirectoryItemsGrid"
+                                       ItemHeight="125"
                                        RightTapped="OnDirectoryItemsGridRightTapped"
                                        ItemsSource="{x:Bind ViewModel.DirectoryItems, Mode=OneWay}" 
                                        ItemTemplate="{StaticResource GridItemTemplate}"
                                        SelectionMode="Extended"
                                        DesiredWidth="160">
-                <MenuFlyout x:Name="ContextMenu">
+            <MenuFlyout x:Name="ContextMenu" />
+            <interactivity:Interaction.Behaviors>
+                <behaviors:MultiSelectionBehavior SelectedItems="{x:Bind ViewModel.SelectedItems, Mode=OneWay}" />
+            </interactivity:Interaction.Behaviors>
+        </controls:AdaptiveGridView>
 
-                </MenuFlyout>
-                <interactivity:Interaction.Behaviors>
-                    <behaviors:MultiSelectionBehavior SelectedItems="{x:Bind ViewModel.SelectedItems, Mode=OneWay}" />
-                </interactivity:Interaction.Behaviors>
-            </controls:AdaptiveGridView>
-            
-            <Grid Width="300" Column="1" Visibility="{x:Bind ViewModel.IsDetailsShown, Mode=OneWay, 
+        <Grid Width="300" Column="1" Visibility="{x:Bind ViewModel.IsDetailsShown, Mode=OneWay, 
                 Converter={StaticResource BoolToVisibilityConverter}}">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="60" />
-                </Grid.RowDefinitions>
-                <Grid.Resources>
-                    <Style TargetType="FrameworkElement" x:Key="PanelItem">
-                        <Setter Property="HorizontalAlignment" Value="Center" />
-                        <Setter Property="Margin" Value="0 6" />
-                    </Style>
-                </Grid.Resources>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="60" />
+            </Grid.RowDefinitions>
+            <Grid.Resources>
+                <Style TargetType="FrameworkElement" x:Key="PanelItem">
+                    <Setter Property="HorizontalAlignment" Value="Center" />
+                    <Setter Property="Margin" Value="0 6" />
+                </Style>
+            </Grid.Resources>
 
-                <ScrollViewer>
-                    <StackPanel Padding="10 5">
+            <ScrollViewer>
+                <StackPanel Padding="10 5">
 
-                        <Image Source="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.Thumbnail, Mode=OneWay}" Height="100" Style="{StaticResource PanelItem}" />
+                    <Image Source="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.Thumbnail, Mode=OneWay}" Height="100" Style="{StaticResource PanelItem}" />
 
-                        <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.Name, Mode=OneWay}" Style="{StaticResource TitleTextBlockStyle}" 
+                    <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.Name, Mode=OneWay}" Style="{StaticResource TitleTextBlockStyle}" 
                            HorizontalAlignment="Center" 
                            Margin="0 6"
                            FontSize="25"/>
 
-                        <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.TitleInfo, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}" 
+                    <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.TitleInfo, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}" 
                            HorizontalAlignment="Center" 
                            Margin="0 6"/>
 
-                        <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
-                            <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Modification date</TextBlock>
-                            <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.ModifiedDate, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
-                        </StackPanel>
-
-                        <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
-                            <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Creation date</TextBlock>
-                            <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.CreationTime, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
-                        </StackPanel>
-
-                        <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
-                            <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Full path</TextBlock>
-                            <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.FullPath, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
-                        </StackPanel>
-
+                    <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
+                        <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Modification date</TextBlock>
+                        <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.ModifiedDate, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
                     </StackPanel>
-                </ScrollViewer>
+
+                    <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
+                        <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Creation date</TextBlock>
+                        <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.CreationTime, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
+                    </StackPanel>
+
+                    <StackPanel Style="{StaticResource PanelItem}" HorizontalAlignment="Stretch">
+                        <TextBlock Style="{StaticResource BodyTextBlockStyle}"> Full path</TextBlock>
+                        <TextBlock Text="{x:Bind ViewModel.SelectedDirectoryItemAdditionalDetails.FullPath, Mode=OneWay}" Style="{StaticResource BodyTextBlockStyle}"  />
+                    </StackPanel>
+
+                </StackPanel>
+            </ScrollViewer>
 
 
-                <Button Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" 
+            <Button Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" 
                         Command="{x:Bind ViewModel.CloseDetailsMenuCommand}">
-                    <FontIcon FontSize="12" Glyph="&#xE8BB;" />
-                </Button>
+                <FontIcon FontSize="12" Glyph="&#xE8BB;" />
+            </Button>
 
-                <Button Grid.Row="1" Style="{StaticResource PanelItem}" 
+            <Button Grid.Row="1" Style="{StaticResource PanelItem}" 
                         FontSize="16" HorizontalAlignment="Left" Padding="12 7"
                         Command="{x:Bind ViewModel.OpenSelectedItemCommand}">Open</Button>
-            </Grid>
         </Grid>
-
         <InfoBar Grid.Row="1"
-                 Margin="0 0 6 6"
-                 IsOpen="{x:Bind ViewModel.HasCopiedFiles, Mode=OneWay}" Severity="Informational"
-                 Background="{ThemeResource MenuFlyoutItemFocusedBackgroundThemeBrush}"
-                 Title="Copied successfully" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+                     Margin="0 0 6 6"
+                     IsOpen="{x:Bind ViewModel.HasCopiedFiles, Mode=OneWay}" Severity="Informational"
+                     Background="{ThemeResource MenuFlyoutItemFocusedBackgroundThemeBrush}"
+                     Title="Copied successfully" VerticalAlignment="Bottom" HorizontalAlignment="Right">
             <interactivity:Interaction.Behaviors>
                 <behaviors:InfoBarBehavior IsOpen="{x:Bind ViewModel.HasCopiedFiles, Mode=OneWay}" />
             </interactivity:Interaction.Behaviors>
@@ -265,12 +166,12 @@
         <Grid.KeyboardAccelerators>
             <!--TODO: HotKey1 Ctrl+R - Rename-->
             <ui:CommandKeyboardAccelerator 
-                Modifiers="Control" Key="R"
-                Command="{x:Bind ViewModel.BeginRenamingItemCommand}"
+                    Modifiers="Control" Key="R"
+                    Command="{x:Bind ViewModel.BeginRenamingItemCommand}"
                 />
             <ui:CommandKeyboardAccelerator 
-                Modifiers="Shift" Key="Delete"
-                Command="{x:Bind ViewModel.DeleteSelectedItemsCommand}"
+                    Modifiers="Shift" Key="Delete"
+                    Command="{x:Bind ViewModel.DeleteSelectedItemsCommand}"
                 />
             <!--TODO: HotKey3 Ctrl+A - SelectAll-->
             <KeyboardAccelerator Modifiers="Control" Key="A" Invoked="SelectAllItems" />
