Changed app look Added sort option selector, created search option selector for a future search options selection. Created new message to transfer view and sort options into page view model

--- a/FileExplorer/UI/UserControls/DirectoryToolBar.xaml
+++ b/FileExplorer/UI/UserControls/DirectoryToolBar.xaml
@@ -85,11 +85,11 @@
             </DropDownButton>
             <DropDownButton 
              Style="{StaticResource MenuButton}"
-             ToolTipService.ToolTip="Apply Filter"
+             ToolTipService.ToolTip="Sort elements"
              ToolTipService.Placement="Bottom">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">Filter</TextBlock>
-                    <FontIcon FontSize="12" Glyph="&#xE71C;"  />
+                    <TextBlock Margin="0 0 7 0 " VerticalAlignment="Center">Sort</TextBlock>
+                    <FontIcon FontSize="12" Glyph="&#xE8CB;"  />
                 </StackPanel>
             </DropDownButton>
             <Button 
