--- a/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
+++ b/FileExplorer/UI/UserControls/DirectoryNavigationPanel.xaml
@@ -91,14 +91,24 @@
         <Grid Column="2" Padding="5 0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="45" />
+                <ColumnDefinition Width="40" />
+                <ColumnDefinition Width="40" />
             </Grid.ColumnDefinitions>
             <TextBox VerticalAlignment="Center"  AcceptsReturn="True" />
             <Grid Column="0" Padding="12  0">
                 <FontIcon HorizontalAlignment="Right" FontSize="14" Glyph="&#xE721;" />
             </Grid>
+
             <Button Grid.Column="1"
+                    ToolTipService.ToolTip="Search options"
+                    ToolTipService.Placement="Bottom"
+                    Style="{StaticResource SmallIconButton}">
+                <FontIcon FontSize="16" Glyph="&#xE712;" />
+            </Button>
+
+            <Button Grid.Column="2"
                     ToolTipService.ToolTip="Settings"
+                    ToolTipService.Placement="Bottom"
                     Style="{StaticResource SmallIconButton}">
                 <FontIcon FontSize="16" Glyph="&#xE713;" />
             </Button>
